--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".SeekSFActivity"/>
+        <activity android:name=".SeekSFActivity"
+            android:theme="@style/Transparent"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
