--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".AddSfkActivity"
             android:label="@string/title_activity_add_sfk" >
         </activity>
+
+        <activity
+            android:name=".SfInfoActivity"
+            android:theme="@style/Transparent" >
+        </activity>
     </application>
 
 </manifest>
