--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:18.0.0'
     compile 'com.android.support:support-v4:18.0.0'
     compile files('src/main/libs/android-async-http-1.4.6.jar')
+    //    compile files('src/main/libs/android-support-v4.jar')
+//    compile files('src/main/libs/android-support-v4.jar')
 }
