--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 26 12:38:12 CST 2015
-sdk.dir=F\:\\Android\\android-sdk
+#Wed Jun 03 16:36:33 CST 2015
+sdk.dir=E\:\\android\\sdk
