--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sfk.activity"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -12,12 +12,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".SeekSFActivity"
-            android:theme="@style/Transparent"/>
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".SeekSFActivity"
+            android:theme="@style/Transparent" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,8 +26,8 @@
         </activity>
         <activity
             android:name=".AddSfkActivity"
-            android:label="@string/title_activity_add_sfk" >
-        </activity>
+            android:label="@string/title_activity_add_sfk"></activity>
+        <activity android:name=".Register"></activity>
     </application>
 
 </manifest>
