Rejected commit: Default

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:name=".AddSfkActivity"
             android:label="@string/title_activity_add_sfk"></activity>
         <activity android:name=".Register"></activity>
+        <activity android:name=".SfInfoActivity"></activity>
+
     </application>
 
 </manifest>
