--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="@string/title_activity_add_sfk"></activity>
         <activity android:name=".Register"></activity>
         <activity android:name=".SfInfoActivity"></activity>
-
+        <activity android:name="com.sfk.uploadFile.activity.MainActivity"></activity>
     </application>
 
 </manifest>
