--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -32,6 +32,17 @@
         <activity android:name=".Register"></activity>
         <activity android:name=".SfInfoActivity"></activity>
         <activity android:name="com.sfk.uploadFile.activity.MainActivity"></activity>
+
+        <!--判断网络是否正常的广播-->
+        <receiver android:name="com.sfk.broadcast.NetWorkBroadcast">
+            <intent-filter>
+                <action android:name="isNetWork"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+
+
     </application>
 
 </manifest>
