--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sfk.activity"
+    package="com.gdkm.sfk"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name="com.gdkm.sfk.application.LoginApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+
         <activity
-            android:name=".SeekSFActivity"
-            android:theme="@style/Transparent" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name="com.gdkm.sfk.activity.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".AddSfkActivity"
-            android:label="@string/title_activity_add_sfk"></activity>
-        <activity android:name=".Register"></activity>
-        <activity android:name=".SfInfoActivity"></activity>
-        <activity android:name="com.sfk.uploadFile.activity.MainActivity"></activity>
 
-        <!--判断网络是否正常的广播-->
-        <receiver android:name="com.sfk.broadcast.NetWorkBroadcast">
+        <activity
+            android:name=".activity.SeekSFActivity"
+            android:theme="@style/Transparent" />
+
+        <activity
+            android:name=".activity.AddSfkActivity"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden"/>
+        <activity
+            android:name=".activity.LoginActivity" />
+
+        <!-- 调用腾讯api -->
+        <activity
+            android:name="com.tencent.tauth.AuthActivity"
+            android:launchMode="singleTask"
+            android:noHistory="true" >
             <intent-filter>
-                <action android:name="isNetWork"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="tencent1104743857" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.tencent.connect.common.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".activity.SfInfoActivity" />
+        <activity
+            android:name=".uploadfile.activity.MainActivity" />
+
+        <!-- 判断网络是否正常的广播 -->
+        <receiver android:name=".broadcast.NetWorkBroadcast" >
+            <intent-filter>
+                <action android:name="isNetWork" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
 
-
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".activity.PersonInfoActivity"
+            android:label="@string/title_activity_person_info" >
+        </activity>
     </application>
 
 </manifest>
